@@ -1,5 +1,12 @@
 2002-09-25  AIDA Shinra <aida-s@jcom.home.ne.jp>
 
+	* [w3m-dev 03319] mailto
+	* main.c (followA): mailto
+	* main.c (cmd_loadURL): mailto
+	* url.c (_parsedURL2Str): mailto: query
+
+2002-09-25  AIDA Shinra <aida-s@jcom.home.ne.jp>
+
 	* [w3m-dev 03318] Re: Passwords
 	* etc.c (struct auth_path): added
 		(passwords): added
